argocd/egress-argocd-application-controller.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-argocd-application-controller
  namespace: argocd
spec:
  selector: >-
    app.kubernetes.io/instance == 'argocd' &&
    app.kubernetes.io/component == 'application-controller'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'repo-server'
        ports:
          - 8081
    - action: Allow
      protocol: TCP
      destination:
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'redis'
        ports:
          - 6379
