argocd/egress-argocd-repo-server.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-argocd-repo-server
  namespace: argocd
spec:
  selector: >-
    app.kubernetes.io/instance == 'argocd' &&
    app.kubernetes.io/component == 'repo-server'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'redis'
        ports:
          - 6379
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
        ports:
          - 8443
