argocd/ingress-argocd-application-controller.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-application-controller
  namespace: argocd
spec:
  selector: >-
    app.kubernetes.io/instance == 'argocd' &&
    app.kubernetes.io/component == 'application-controller'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app == 'prometheus'
      destination:
        ports:
          - 8082
