argocd/ingress-argocd-redis.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-redis
  namespace: argocd
spec:
  selector: >-
    app.kubernetes.io/instance == 'argocd' &&
    app.kubernetes.io/component == 'redis'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'application-controller' ||
          app.kubernetes.io/component == 'server' ||
          app.kubernetes.io/component == 'repo-server'
      destination:
        ports:
          - 6379
