argocd/ingress-argocd-repo-server.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-repo-server
  namespace: argocd
spec:
  selector: >-
    app.kubernetes.io/instance == 'argocd' &&
    app.kubernetes.io/component == 'repo-server'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'application-controller'
      destination:
        ports:
          - 8081
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app.kubernetes.io/instance == 'argocd' &&
          app.kubernetes.io/component == 'server'
      destination:
        ports:
          - 8081
